--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Mako==1.3.5
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
 python-dotenv==1.0.1
+pytz==2024.2
 SQLAlchemy==2.0.15
 typing_extensions==4.12.2
 Werkzeug==2.3.4
